--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Correo: dlgon695@gmail.com </h1>
+    <h2> Nombre: Denisse </h2>
     <p> Instructora </p>
 </body>
 </html>
